
* new function bedgraph() can output UCSC bedgraph files for methylRaw and methylDiff objects

* new function percMethylation() extracts percent methylation values from a methylBase object and returns a matrix

IMPROVEMENTS AND BUG FIXES

* regionCounts() bug that appeared with data.table 1.8.0 is fixed

* unite() bug that appeared with R 2.15 is fixed

* unite() now can merge bases/regions that are not covered by all samples by setting "min.per.replicate" option

* calculateDiffMeth() can deal with NA values introduced by setting "min.per.replicate" option of unite() function

* PCASamples() now uses "prcomp" function to do the PCA analysis

* external annotation data (cpgi.hg18.bed.txt and refseq.hg18.bed.txt) that comes with the package is now only a subset of full datasets. Do not use them for your own analysis, download the complete annotation data from UCSC or other sources in BED format.

methylKit 0.4.1
--------------

NEW FUNCTIONS AND FEATURES

* new function select() can be used to subset methylRaw, methylBase and methylDiff objects to create new objects with a subset of methylation data useful if you want to use only a particular portion of methylation events on the genome.

IMPROVEMENTS AND BUG FIXES

* read.bismark bug fixed, now it should be able to save methylation call files with no problem

methylKit 0.4
--------------

NEW FUNCTIONS AND FEATURES

* New read.bismark() function can read directly from a sorted SAM file output by Bismark aligner, the function can save methylation calls as text files or read them as methylRaw object to be used in analysis

* calculateDiffMeth() can do all differential methylation calculations using multiple-cores if 'num.cores' is set to an integer denoting how many cores should be used.

* getCoverageStats() & getMethylationStats() have a new option called 'labels', if set to FALSE, no labels will be drawn on top of the histogram bars.

IMPROVEMENTS AND BUG FIXES

* cov.bases option in tileMethylCounts() now works
