@@ -120,9 +120,16 @@
 # Principal Components Analysis on methylBase object
 # x matrix each column is a sample
 # cor a logical value indicating whether the calculation should use the correlation matrix or the covariance matrix. (The correlation matrix can only be used if there are no constant variables.)
-.pcaPlot = function(x, cor=TRUE, screeplot=FALSE, adj.lim=c(0.001,0.1), treatment=treatment,sample.ids=sample.ids,context,scale=TRUE,center=TRUE){
+.pcaPlot = function(x, cor=TRUE,comp1=1,comp2=2, screeplot=FALSE, adj.lim=c(0.001,0.1), treatment=treatment,sample.ids=sample.ids,context,scale=TRUE,center=TRUE,sd.threshold=0,obj.return=FALSE){
   #x.pr = princomp(x, cor=cor)
-  x.pr = prcomp(x,scale.=scale,center=center)
+  
+  if(!is.null(sd.threshold))
+  {
+    sds=apply(x,1,sd)
+    x.pr = prcomp((x[sds>sd.threshold,]),scale.=scale,center=center)
+  }else{
+    x.pr = prcomp((x),scale.=scale,center=center)
+  }
   if (screeplot){
     i=5;screeplot(x.pr, type="barplot", main=paste(context,"methylation PCA Screeplot"), col = rainbow(i)[i])
   }
@@ -134,12 +141,46 @@
     my.cols=rainbow(length(unique(treatment)), start=1, end=0.6)
 
     
-    plot(loads[,1:2], main = paste(context,"methylation PCA Analysis"),col=my.cols[treatment+1],
-         xlim=.adjlim(loads[,1],adj.lim[1]), ylim=.adjlim(loads[,2], adj.lim[2]),xlab="loadings for PC1", ylab="loadings for PC2")
-    text(loads[,1], loads[,2],labels=sample.ids,adj=c(-0.4,0.3), col=my.cols[treatment+1])
+    plot(loads[,comp1],loads[,comp2], main = paste(context,"methylation PCA Analysis"),col=my.cols[treatment+1],
+         xlim=.adjlim(loads[,comp1],adj.lim[1]), ylim=.adjlim(loads[,comp2], adj.lim[2]),xlab=paste("loadings for PC",comp1,sep=""), ylab=paste("loadings for PC",comp2,sep=""))
+    text(loads[,comp1], loads[,comp2],labels=sample.ids,adj=c(-0.4,0.3), col=my.cols[treatment+1])
   }
-  return((x.pr))
+  if(obj.return){  return((x.pr))}
+
 }
+
+
+# Principal Components Analysis on methylBase object on transposed data
+# x matrix each column is a sample
+.pcaPlotT = function(x,cor=TRUE,comp1=1,comp2=2,screeplot=FALSE, adj.lim=c(0.001,0.1), treatment=treatment,sample.ids=sample.ids,context,scale=TRUE,center=TRUE,sd.threshold=0,obj.return=FALSE){
+  #x.pr = princomp(x, cor=cor)
+  if(!is.null(sd.threshold))
+  {
+    sds=apply(x,1,sd)
+    x.pr = prcomp(t(x[sds>sd.threshold,]),scale.=scale,center=center)
+  }else{
+    x.pr = prcomp(t(x),scale.=scale,center=center)
+  }
+  
+  if (screeplot){
+    i=5;screeplot(x.pr, type="barplot", main=paste(context,"methylation PCA Screeplot"), col = rainbow(i)[i])
+  }
+  else{
+    #loads = loadings(x.pr)
+    #loads = x.pr$rotation
+    treatment=treatment
+    sample.ids=sample.ids
+    my.cols=rainbow(length(unique(treatment)), start=1, end=0.6)
+    pc1=x.pr$x[,comp1]
+    pc2=x.pr$x[,comp2]
+    
+    plot(pc1,pc2, main = paste(context,"methylation PCA Analysis"),col=my.cols[treatment+1],
+         xlim=.adjlim(pc1,adj.lim[1]), ylim=.adjlim(pc2, adj.lim[2]),xlab=paste("PC",comp1,sep=""), ylab=paste("PC",comp2,sep=""))
+    text(pc1, pc2,labels=sample.ids,adj=c(-0.4,0.3), col=my.cols[treatment+1])
+  }
+  if(obj.return){  return((x.pr))}
+}
+
 
 # end of regular functions to be used in S4 functions
 #---------------------------------------------------------------------------------------
@@ -181,29 +222,45 @@ setMethod("clusterSamples", "methylBase",
 #' @param adj.lim a vector indicating the propotional adjustment of xlim (adj.lim[1]) and ylim (adj.lim[2]). (default: c(0.0004,0.1))
 #' @param scale logical indicating if \code{prcomp} should scale the data to have unit variance or not (default: TRUE)
 #' @param center logical indicating if \code{prcomp} should center the data or not (default: TRUE)
-#' @usage PCASamples(.Object, cor=TRUE, screeplot=FALSE, adj.lim=c(0.0004,0.1),scale=TRUE,center=TRUE)
+#' @param comp vector of integers with 2 elements specifying which components to be plotted.
+#' @param transpose if TRUE (default) percent methylation matrix will be transposed, this is equivalent to doing PCA on variables that are regions/bases. The resulting plot will location of samples in the new coordinate system
+#'        if FALSE the variables for the matrix will be samples and the resulting plot whill show how each sample (variable) contributes to the principle component.
+#'        the samples that are highly correlated should have similar contributions to the principal components.       
+#' @param sd.threshold standard deviation threshold to remove bases/regions that have % methylation standard dev. lower than this threshold.
+#'        if NULL no strandard deviation will be calculated and this threshold will not be applied.
+#' @param obj.return if the result of \code{prcomp} function should be returned or not. Default:FALSE
+#' @usage PCASamples(.Object, cor=TRUE, screeplot=FALSE, adj.lim=c(0.0004,0.1),scale=TRUE,center=TRUE,comp=c(1,2),transpose=TRUE,sd.threshold=0,obj.return=FALSE)
 #' @return The form of the value returned by \code{PCASamples} is the summary of principal component analysis by \code{prcomp}.
 #' @note cor option is not in use anymore, since \code{prcomp} is used for PCA analysis instead of \code{princomp}
+#'  
 #'
 #' @export
 #' @docType methods
 #' @rdname PCASamples-methods
-setGeneric("PCASamples", function(.Object, cor=TRUE, screeplot=FALSE, adj.lim=c(0.0004,0.1),scale=TRUE,center=TRUE) standardGeneric("PCASamples"))
+setGeneric("PCASamples", function(.Object, cor=TRUE, screeplot=FALSE, adj.lim=c(0.0004,0.1),scale=TRUE,center=TRUE,comp=c(1,2),transpose=TRUE,sd.threshold=0,obj.return=FALSE) standardGeneric("PCASamples"))
 
 #' @rdname PCASamples-methods
 #' @aliases PCASamples,methylBase-method
 setMethod("PCASamples", "methylBase",
-                    function(.Object, cor=TRUE, screeplot=FALSE, adj.lim=c(0.0004,0.1),scale=TRUE,center=TRUE){
+                    function(.Object, cor, screeplot, adj.lim,scale,center,comp,transpose,sd.threshold,obj.return){
                       
                         mat      = getData(.Object)
                         mat      = mat[ rowSums(is.na(mat))==0, ] # remove rows containing NA values, they might be introduced at unite step
                         meth.mat = mat[, .Object@numCs.index]/(.Object[,.Object@numCs.index] + .Object[,.Object@numTs.index] )                                      
                         names(meth.mat)=.Object@sample.ids
                         
-                        .pcaPlot(meth.mat, cor=cor, screeplot=screeplot, adj.lim=adj.lim, treatment=.Object@treatment,sample.ids=.Object@sample.ids,context=.Object@context,scale=scale,
-                                 center=center)
-                        
+                        if(transpose){
+                          .pcaPlotT(meth.mat,cor=cor,comp1=comp[1],comp2=comp[2],screeplot=screeplot, adj.lim=adj.lim, 
+                                    treatment=.Object@treatment,sample.ids=.Object@sample.ids,context=.Object@context
+                                    ,scale=scale,center=center,sd.threshold=sd.threshold,obj.return=obj.return)
+
+                        }else{
+                          .pcaPlot(meth.mat, cor=cor,comp1=comp[1],comp2=comp[2],screeplot=screeplot, adj.lim=adj.lim, 
+                                  treatment=.Object@treatment,sample.ids=.Object@sample.ids,context=.Object@context,scale=scale,
+                                 center=center,sd.threshold=sd.threshold,obj.return=obj.return)
                         }
+                        
+                    }      
 )
 
 #numC=grep("numCs", names(methidh))
