@@ -7,7 +7,7 @@
 \alias{regionCounts,methylRawList,GRangesList-method}
 \title{GETs regional counts for given GRanges or GRangesList object}
 \usage{
-  regionCounts(methylObj,regions,cov.bases=0)
+  regionCounts(methylObj,regions,cov.bases=0,strand.aware=FALSE)
 }
 \arguments{
   \item{methylObj}{a \code{methylRaw} or
@@ -18,6 +18,9 @@
   \item{cov.bases}{number minimum bases covered per region
   (Default:0). Only regions with base coverage above this
   threshold are returned.}
+
+  \item{strand.aware}{if set to TRUE only CpGs that match
+  the strand of the region will be summarized}
 }
 \value{
   RETURNS a new methylRaw or methylRawList object
