@@ -15,11 +15,13 @@ IMPROVEMENTS AND BUG FIXES
 
 * unite() bug that appeared with R 2.15 is fixed
 
-* unite() now can merge bases/regions that are not covered by all samples by setting "min.per.replicate" option
+* unite() now can merge bases/regions that are not covered by all samples by setting "min.per.group" option
 
 * calculateDiffMeth() can deal with NA values introduced by setting "min.per.replicate" option of unite() function
 
 * PCASamples() now uses "prcomp" function to do the PCA analysis
+
+* PCASamples() has new options "transpose" and "sd.threshold". Now one can do a PCA analysis on the transposed % methylation values. "sd.threshold" is for removing rows with small variation prior to PCA analysis  .see ?PCASamples for details
 
 * external annotation data (cpgi.hg18.bed.txt and refseq.hg18.bed.txt) that comes with the package is now only a subset of full datasets. Do not use them for your own analysis, download the complete annotation data from UCSC or other sources in BED format.
 
